--- a/src/components/Join/Join.css
+++ b/src/components/Join/Join.css
@@ -2,18 +2,18 @@ section{
 	background: url("./images/warp_18.jpg");
 	width: 100%;
 }
-section .top{
+section .tope{
 	width: 1200px;
 	margin: 0 auto;
 	padding-top: 24px;
 	display: flex;
 	flex-direction: column;
 }
-section .top{
+section .tope{
 	background: url("./images/top_03.jpg") no-repeat;
 	background-color: #fff;
 }
-section .top h1{
+section .tope h1{
 	line-height: 60px;
 	font-size: 30px;
 	border-left: 4px solid #000;
@@ -21,7 +21,7 @@ section .top h1{
 	padding-left: 19px;
 	color: #2a2e31;
 }
-.shangpin{
+.shangpinn{
 	width: 1100px;
 	margin: 0 auto;
 	margin-top: 87px;
@@ -29,11 +29,11 @@ section .top h1{
 	border-bottom: 2px solid #ccc;
 	display: flex;
 }
-.shangpin img:nth-child(1){
+.shangpinn img:nth-child(1){
 	display: block;
 	margin: 9px 10px 9px 10px;
 }
-.shangpin h2:nth-child(2){
+.shangpinn h2:nth-child(2){
 	width: 240px;
 	margin-top: 30px;
 	font-size: 18px;
