--- a/src/components/Order/Order.css
+++ b/src/components/Order/Order.css
@@ -130,6 +130,7 @@ body .wrap section .biankuang{
 	display: block;
 }
 .fukuan{
+	display: block;
 	line-height: 60px;
 	width: 220px;
 	margin-top: 30px;
